// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`businessActions Dispatches the correct action and payload (makePaperclip) 1`] = `
Array [
  Object {
    "type": "MAKE_PAPERCLIP",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (updateFunds) 1`] = `
Array [
  Object {
    "type": "UPDATE_FUNDS",
    "value": 5,
  },
]
`;
